--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Rock / Paper / Scissors</title>
   </head>
   <body>
+    <button id="rock" value="pierre">Pierre</button>
+    <button id="paper" value="papier">Papier</button>
+    <button id="scissors" value="ciseaux">Ciseaux</button>
+    <div id="result"></div>
     <script src="index.js"></script>
   </body>
 </html>
